@@ -1,18 +1,55 @@
-use 5.008001;
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
+use strict;
+use warnings;
+
+use 5.010000;
+
 use ExtUtils::MakeMaker;
-# See lib/ExtUtils/MakeMaker.pm for details of how to influence
-# the contents of the Makefile that is written.
-WriteMakefile(
-    NAME              => 'Redis::ScriptCache',
-    VERSION_FROM      => 'lib/Redis/ScriptCache.pm', # finds $VERSION
-    PREREQ_PM         => {
-      'Carp' => '0',
-      'Redis' => '1.955',
-      'Class::XSAccessor' => '1.12',
-      'Test::Deep' => '0',
-      'Test::More' => '0.095',
-    }, # e.g., Module::Name => 1.1
-    ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
-      (ABSTRACT_FROM  => 'lib/Redis/ScriptCache.pm', # retrieve abstract from module
-       AUTHOR         => 'Steffen Mueller <smueller@cpan.org>') : ()),
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Cached Lua scripts on a Redis server",
+  "AUTHOR" => "Steffen Mueller <smueller\@cpan.org>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0
+  },
+  "DISTNAME" => "Redis-ScriptCache",
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.010000",
+  "NAME" => "Redis::ScriptCache",
+  "PREREQ_PM" => {
+    "Carp" => 0,
+    "Class::XSAccessor" => "1.12",
+    "Digest::SHA1" => 0,
+    "Redis" => "1.955",
+    "Test::Deep" => 0,
+    "Test::More" => "0.095",
+    "Try::Tiny" => 0
+  },
+  "VERSION" => "0.05",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
 );
+
+
+my %FallbackPrereqs = (
+  "Carp" => 0,
+  "Class::XSAccessor" => "1.12",
+  "Digest::SHA1" => 0,
+  "Redis" => "1.955",
+  "Test::Deep" => 0,
+  "Test::More" => "0.095",
+  "Try::Tiny" => 0
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
