@@ -1,21 +1,32 @@
 name    = Redis-ScriptCache
-version = 0.04
+version = 0.05
 author  = Steffen Mueller <smueller@cpan.org>
 
 [Prereqs]
+perl = 5.10.0
 Carp = 0
-Redis = 1.955
 Class::XSAccessor = 1.12
+Digest::SHA1 = 0
+Redis = 1.955
 Test::Deep = 0
 Test::More = 0.095
-
-[GatherDir]
+Try::Tiny = 0
+[Git::GatherDir]
+exclude_filename = Makefile.PL
+exclude_filename = META.json
+exclude_filename = README.md
 [PruneCruft]
 [ManifestSkip]
 [MetaYAML]
 [MetaJSON]
-;[MakeMaker]
+[MakeMaker]
 [Manifest]
+[NextRelease]
+format = %-5v %{ccc MMM dd HH:mm yyyy}d%{ (TRIAL RELEASE)}T
+time_zone = UTC
+[CopyFilesFromBuild]
+copy = META.json
+copy = Makefile.PL
 ;[TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
